* Implemented exception-free checks for type compatibility in method registration.
* Added workaround for RTD disconnect bug in Excel 2010 RTM version.
* Restructured ExcelDnaUtil.WindowHandle and ExcelDnaUtil.Application to work better under Excel 2013.
* Fixed ExcelDnaUtil.IsInFunctionWizard() under Excel 2013.
* Add support for Excel 2010+ native queued async functions.

Version 0.30 (12 December 2012)
-------------------------------
* Fixed LoadComAddIn error when using a direct ExcelComAddIn-derived class.
* Fixed (Ribbon Helper) display in ribbon tooltips.
* Fixed RTD / array formula activation bug.
* Fixed IsMacroType=true reference argument sheet error (ExcelReference pointed to active sheet instead of current sheet).
* Fixed array marshaling pointer manipulation concern under 64-bit Excel.
* Fixed check for derived attributes too - for backward compatibility with v. 0.25.
* Fixed assembly multiple-loading problem for packed assemblies.
* Fixed persistent COM registration (Regsv32.exe / ComServer.DllRegisterServer) to allow HKCR registration whenever possible (for UAC elevation issue).
* Fixed Excel version check when COM / RTD Server loads before add-in is loaded - ribbon would not load.
* Fixed IntPtr OverflowException in high-memory 32-bit processes.
* Fixed custom task panes UserControl activation - do HKCR registration whenever possible (for UAC elevation issue).
* Fixed double[0,1] array marshaling memory allocation error with potential access violation.
* Allow abstract base classes in ExcelRibbon class hierarchy. Now loads the first concrete descendent of ExcelRibbon as the ribbon handler.
* Remove Obsolete class ExcelDna.Integration.Excel. (Use ExcelDnaUtil instead.) Allows smooth XlCall usage.
* Allow external SourceItem packing.
* Add ExcelAsyncUtil for async macro calls.
* Add thread-safe RTD server base class ExcelRtdServer.
* Add async function helper as ExcelAsyncUtil.Run.